--- a/src/bp-templates/bp-nouveau/readylaunch/css/sass/components/groups-single/_group-common.scss
+++ b/src/bp-templates/bp-nouveau/readylaunch/css/sass/components/groups-single/_group-common.scss
@@ -225,11 +225,7 @@
 	> .bb-rl-secondary-header {
 		top: 71px;
 		position: sticky;
-		z-index: 9991;
-
-		.bb-rl-activity-modal-open & {
-			z-index: 999;
-		}
+		z-index: calc(var(--bb-rl-z-index-fixed) - 1);
 
 		.admin-bar & {
 			top: 103px;
